Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/GTM_Tier__c.object-meta.xml
<CustomObject>
    <description>Tier definition defined based on GTM</description>
    <label>Tier</label>
    <nameField>
        <label>GTM Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>