Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Bonus_point__c.field-meta.xml
<CustomField>
    <fullName>Bonus_point__c</fullName>
    <description>bonus point</description>
    <inlineHelpText>bonus point</inlineHelpText>
    <label>Bonus point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>