Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Colour in which tier will be shown</description>
    <inlineHelpText>Enter colour hex code</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>