Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>end date</description>
    <label>End date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>