Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Is_active__c.field-meta.xml
<CustomField>
    <fullName>Is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if tier is currently active</description>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>