Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Pre_requisite__c.field-meta.xml
<CustomField>
    <fullName>Pre_requisite__c</fullName>
    <description>Pre requisite</description>
    <inlineHelpText>Define the pre requisite of tier if any, this will be shown to influencer as text</inlineHelpText>
    <label>Pre requisite</label>
    <type>TextArea</type>
</CustomField>