Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>start date</description>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>