Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/fields/Start_point__c.field-meta.xml
<CustomField>
    <fullName>Start_point__c</fullName>
    <label>Start point</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>