Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/validationRules/Color_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Color_code</fullName>
    <active>true</active>
    <description>Hexadecimal 6 digit color code</description>
    <errorConditionFormula>NOT(REGEX(Color__c, &quot;(#[A-Fa-f0-9]{6}|#[A-Fa-f0-9]{3})$&quot;))</errorConditionFormula>
    <errorDisplayField>Color__c</errorDisplayField>
    <errorMessage>Enter a valid hex colour code with #</errorMessage>
</ValidationRule>