Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/validationRules/edit_tier.validationRule-meta.xml
<ValidationRule>
    <fullName>edit_tier</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED( Start_point__c )  || ISCHANGED( Name )) &amp;&amp;  
Is_active__c  &amp;&amp;  
( Start_date__c  &lt;=  TODAY() )</errorConditionFormula>
    <errorMessage>Start point and name cannot be changed for active tiers</errorMessage>
</ValidationRule>