Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/validationRules/end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_date__c  &gt;  End_date__c</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>Please enter a start date less than end date</errorMessage>
</ValidationRule>