Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/validationRules/start_date_today.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_today</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (
ISCHANGED(Start_date__c),
ISNEW()
),
Start_date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>Please enter a start date greater than today</errorMessage>
</ValidationRule>