Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/validationRules/start_point_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>start_point_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Start_point__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Start_point__c</errorDisplayField>
    <errorMessage>Enter positive value in start point</errorMessage>
</ValidationRule>