Partial_14Dec2021/force-app/main/default/objects/GTM_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_point__c</columns>
    <columns>Bonus_point__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Color__c</columns>
    <columns>Is_active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>